# worldspec

./: .gitignore  AGENTS.md  CITATION.cff  GOVERNANCE.md  PUBLISHING.md  README.md  WORLDSPEC_AGENT_INSTRUCTIONS.md  pyproject.toml
.claude/: settings.local.json
conformance/: README.md  manifest.json
docs/: _config.yml  architecture.md  authoring-with-an-llm.md  demo-scenario.md  example-short-interest-rebate.md  index.md  language-spec-v0.1.md  llms-full.txt  llms.txt  ontology-model.md  open-questions.md  product-vision.md  usage.md  what-is-worldspec.md
docs/adr/: ADR-001-yaml-authoring.md  ADR-002-canonical-json-ir.md  ADR-003-separate-compiler-runtime.md  ADR-004-neo4j-behind-repository.md  ADR-005-safe-expression-ast.md  ADR-006-bitemporal-state.md  ADR-007-defer-jepa.md  ADR-008-evidence-required.md  ADR-009-sqlite-persistence.md
docs/schemas/: worldspec-model-0.1.schema.json
docs/spec/: index.md
examples/investone-like-demo/: context.json
examples/swing-legacy-assessment/: FINDINGS.md
models/application-modernization/: actions.yaml  entities.yaml  invariants.yaml  relationships.yaml  states.yaml  transitions.yaml
models/jpmc-campaign/: context.json  model.yaml
models/short-interest-rebate/: model.yaml
models/swing-legacy-assessment/: actions.yaml  entities.yaml  invariants.yaml  relationships.yaml  states.yaml  transitions.yaml
tests/: conftest.py  test_api.py  test_builder.py  test_cli.py  test_compile_and_package.py  test_parser.py  test_parser_branches.py  test_persistence.py  test_runtime.py  test_runtime_branches.py  test_semantics.py
(+41 files in other folders)
