[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldspec"
version = "0.1.0"
description = "A declarative language and compiler for modeling enterprise systems as entities, relationships, states, invariants, actions, and transitions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "WorldSpec" }]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "httpx>=0.27", "fastapi>=0.110", "uvicorn[standard]>=0.27"]

[project.scripts]
worldspec = "worldspec.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

# Independent semantic versions (see ADR + docs/architecture.md)
[tool.worldspec.versions]
language = "0.1.0"
compiler = "0.1.0"
package_format = "0.1.0"
